# spark

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.py
models/: basicmesh.glb
resources/shaders/: background.frag.glsl  base_math.glsl  bloom.comp.glsl  color.frag.glsl  colors.glsl  compose.comp.glsl  depth.vert.glsl  equirectangular_to_cubemap.comp.glsl  irradiance.comp.glsl  pbr.frag.glsl  pbr.vert.glsl  pbr_utils.glsl  prefilter.comp.glsl
shaders/: colored_triangle.frag.glsl  colored_triangle.vert.glsl  colored_triangle_mesh.vert.glsl  gradient.comp.glsl  gradient_color.comp.glsl  shader.frag.glsl  shader.vert.glsl  sky.comp.glsl  tex_image.frag.glsl
spark/: asset_loader.odin  main.odin  vk_descriptors.odin  vk_device.odin  vk_engine.odin  vk_pipelines.odin  vk_swapchain.odin  vk_utils.odin
src/: imfilebrowser.h  main.cpp
src/Assets/: Asset.cpp  Spark_Asset.cpp  Spark_LoadAssimpAsset.cpp  Spark_LoadGLTFAsset.cpp
src/Renderer/: Program.cpp  Renderer.cpp  Spark_Environment.cpp  Spark_FrameStats.cpp  Spark_GenDFG.cpp  Spark_Material.cpp  Spark_Mesh.cpp  Spark_Program.cpp  Spark_RenderPrimitives.cpp  Spark_Renderer.cpp  Spark_Texture.cpp
src/UI/: Spark_UI.cpp
src/World/: Spark_Entity.cpp  Spark_World.cpp  World.cpp
src/assets/: LoadAssimpAsset.cpp  LoadGLTFAsset.cpp  asset.cpp  asset.h
src/include/Spark/Assets/: Asset.h  Spark_Asset.h
src/include/Spark/Core/: Spark_Property.h  Spark_Utils.h
src/include/Spark/Renderer/: Environment.h  FrameStats.h  Material.h  Program.h  Renderer.h  Spark_Environment.h  Spark_FrameStats.h  Spark_Material.h  Spark_Mesh.h  Spark_Program.h  Spark_Renderer.h  Spark_Texture.h  Texture.h
src/include/Spark/UI/: Spark_UI.h
src/include/Spark/World/: Entity.h  Spark_AnimationSystem.h  Spark_Entity.h  Spark_World.h  World.h
src/renderer/: FrameStats.cpp  GenDFG.cpp  RenderPrimitives.cpp  dfggen.cpp  environment.cpp  environment.h  frame_stats.h  material.cpp  material.h  program.cpp  render_primitives.cpp  renderer.cpp  renderer.h  texture.cpp
src/world/: Entity.cpp  world.cpp  world.h
